force-app/main/default/objects/Moodboard__c/Moodboard__c.object-meta.xml
<CustomObject>
    <description>Object created to have Moodboard Info</description>
    <label>Moodboard</label>
    <nameField>
        <label>Moodboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moodboards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>