force-app/main/default/objects/Moodboard__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if it&apos;s a default moodboard, created with the opportunity</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>