force-app/main/default/objects/Moodboard__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Url to the moodboard website</description>
    <label>Url</label>
    <type>Url</type>
</CustomField>